--- a/count_down_timer.html
+++ b/count_down_timer.html
@@ -4,62 +4,83 @@
     <meta charset="UTF-8">
     <title></title>
     <style>
+        body {
+            padding: 40px 0;
+        }
+
         #my_box {
-            padding: 20px 0 20px 40px;
-            background: lightgray;
+            padding: 20px 40px 20px 40px;
+            width: 40%;
+            margin: 0 auto;
+            text-align: center;
+            background: lightblue;
+            border: 2px solid darkgray;
+        }
+
+        .text {
+            font-family: Montserrat, sans-serif;
+        }
+
+        #title1 {
+            text-align: center;
+            color: darkblue;
         }
     </style>
 </head>
 <body>
 <div id="my_box">
+    <h1 class="text" id="title1">Count Down Timer</h1>
 
     <p>
-        <label for="startMins">Enter minutes : seconds</label>
+        <label class="text" for="startMins"> minutes : seconds</label>
     </p>
+
     <p>
-        <input  id="startMins" size="4" maxlength="2">
+        <input id="startMins" size="4" maxlength="2">
         <span id="colon">:</span>
-        <input  id="startSecs" size="4" maxlength="2">
+        <input id="startSecs" size="4" maxlength="2">
     </p>
 
     <p>
-       <button id="btn" onclick="timerID();">Start</button>
+        <button id="btn" class="text btn" onclick="countDown.clock.startTimer()">Start</button>
     </p>
 
-    <span id="cd_value"></span>
+    <span id="cdValue"></span>
+
     <div id="audio"></div>
 
 </div>
 <script>
-        ////////////////////////////////////////////////////////////////////
-        //Create a web page that allows the user to set a count down timer value
-        // e.g. 1 minute that plays a sound and flashes the screen when it counts down to zero
-        // and indicates progress as the timer counts down.
-        // Bonus points for creativity.
-        // This is deliberately vague and open to interpretation.
-        // This is the way we get most assignments from business users.
-        //////////////////////////////////////////////////////////////////////
-        // Requirements:
-        // 1. User sets time
-        // 2. Timer counts down to zero
-        // 3. Progress of timer indicated by sound and flash of screen
-        // 4. Be Creative
-        // 5. It's on a web page
-        ////////////////////////////////////////////////////////////////////
-        // CODE:
-        //
-        // Just get a counter going:
+    ////////////////////////////////////////////////////////////////////
+    //Create a web page that allows the user to set a count down timer value
+    // e.g. 1 minute that plays a sound and flashes the screen when it counts down to zero
+    // and indicates progress as the timer counts down.
+    // Bonus points for creativity.
+    // This is deliberately vague and open to interpretation.
+    // This is the way we get most assignments from business users.
+    //////////////////////////////////////////////////////////////////////
+    // Requirements:
+    // 1. User sets time
+    // 2. Timer counts down to zero
+    // 3. Progress of timer indicated by sound and flash of screen
+    // 4. Be Creative
+    // 5. It's on a web page
+    ////////////////////////////////////////////////////////////////////
 
-        // These are my global variables man!
-        var startElMins;
-        var startElSecs;
-        var startStringMins;
-        var startStringSecs;
-        var startTimeMins;
-        var startTimeSecs;
-        var startTime;
+    // Trying something else
+
+//        var startElMins;
+//        var startElSecs;
+//        var startStringMins;
+//        var startStringSecs;
+//        var startTimeMins;
+//        var startTimeSecs;
+
+    var countDown = {};
+    countDown.clock = function() {
         var t;
         var totSecs;
+
 
         //function to decrement the counter
         function myCounter() {
@@ -68,13 +89,13 @@
             //show the counter value in the console
             console.log(totSecs);
             //show the counter value on the screen
-            document.getElementById("cd_value").innerHTML = totSecs;
-            var backEl = document.getElementById("my_box");
+            document.getElementById("cdValue").innerHTML = totSecs;
 
+            var backEl = document.getElementById("my_box");
             //change the background of the box under different conditions.
-            if (totSecs % 3 == 0 && totSecs % 5 == 0){
+            if (totSecs % 3 == 0 && totSecs % 5 == 0) {
                 backEl.style.backgroundColor = "yellow";
-            } else if (totSecs % 5 == 0 ){
+            } else if (totSecs % 5 == 0) {
                 backEl.style.backgroundColor = "blue";
             } else if (totSecs % 3 == 0) {
                 backEl.style.backgroundColor = "red";
@@ -91,33 +112,43 @@
 
         //function to calc the time in seconds
         //gets the user input and converts to seconds
-        function timeInSecs(){
+        function timeInSecs() {
             //get the input elements for minutes and seconds
-            startElMins = document.getElementById("startMins");
-            startElSecs = document.getElementById("startSecs");
+            var startElMins = document.getElementById("startMins");
+            var startElSecs = document.getElementById("startSecs");
             //use the elements to get the mins and secs
-            startStringMins = startElMins.value;
-            startStringSecs = startElSecs.value;
+            var startStringMins = startElMins.value;
+            var startStringSecs = startElSecs.value;
+            //do some error checking to make sure its NaN
+            if (startStringMins.trim() == "") {
+                startStringMins = 0;
+            }
             console.log(startStringMins);
             //convert the strings to an integers base 10
-            startTimeMins = parseInt(startStringMins, 10);
-            startTimeSecs = parseInt(startStringSecs, 10);
+            var startTimeMins = parseInt(startStringMins, 10);
+            var startTimeSecs = parseInt(startStringSecs, 10);
             console.log(startTimeMins);
             //convert into total seconds
-            totSecs = (startTimeMins * 60) + startTimeSecs;
-            console.log(totSecs);
-            return totSecs;
+            var totalSeconds = (startTimeMins * 60) + startTimeSecs;
+            console.log(totalSeconds);
+            return totalSeconds;
         }
 
         //function to call the counter every second
-        function timerID() {
+        function startTimer() {
             //call timeInSecs() to get the time in seconds.
-            timeInSecs();
+            totSecs = timeInSecs();
             //call the count down function every second.
             t = setInterval(myCounter, 1000);
         }
+        return {
+            startTimer: startTimer
 
-    </script>
+        }
+    }(); //IIFE - Immediately Invoked Function Expression
+
+
+</script>
 </body>
 
 </html>
