--- a/count_down_timer.html
+++ b/count_down_timer.html
@@ -42,7 +42,9 @@
     </p>
 
     <p>
-        <button id="btn" class="text btn" onclick="countDown.clock.startTimer()">Start</button>
+        <button id="start" class="text btn" onclick="countDown.clock.startTimer()">Start</button>
+        <button id="pause" class="text btn" onclick="countDown.clock.pauseTimer()">Pause</button>
+        <button id="resume" class="text btn" onclick="countDown.clock.resumeTimer()">Resume</button>
     </p>
 
     <span id="cdValue"></span>
@@ -136,14 +138,27 @@
 
         //function to call the counter every second
         function startTimer() {
+            console.log("starting...")
             //call timeInSecs() to get the time in seconds.
             totSecs = timeInSecs();
             //call the count down function every second.
             t = setInterval(myCounter, 1000);
         }
-        return {
-            startTimer: startTimer
 
+        function pauseTimer() {
+            console.log("paused....")
+            clearInterval(t);
+        }
+
+        function resumeTimer() {
+            console.log("resuming...")
+            t = setInterval(myCounter, 1000);
+        }
+
+        return {
+            startTimer: startTimer,
+            pauseTimer: pauseTimer,
+            resumeTimer: resumeTimer
         }
     }(); //IIFE - Immediately Invoked Function Expression
 
